# app-migratory-platform-android

./: .gitattributes  .gitignore  README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/mobile/agentplatform/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/node/: package-lock.json  package.json
app/src/main/cpp/: native-lib.cpp
app/src/main/java/mobile/agentplatform/: ActionSendZipActivity.kt  AgentActivity.kt  AgentManager.kt  AgentRules.kt  AppConfig.kt  AppConstant.kt  AppFile.kt  AppManagementActivity.kt  AppManagementFragment.kt  DevicesFragment.kt  DirectoryChooserFragment.kt  DrawerFragmentInterface.kt  Encoder.kt  FileManager.kt  FileSystem.kt  FreshConfigActivity.kt  MainActivity.kt  MainFragmentInteractionListener.kt  NativeClient.kt  Pair.kt  QrActivity.kt  QrViewActivity.kt  ReceivingAppAsyncTask.kt  ReceivingAppTrustedAsyncTask.kt  SendingAppAsyncTask.kt  ShareAppAsyncTask.kt  SharingFragment.kt
app/src/main/res/drawable/: ic_send.xml  img_btn_bg.xml  layout_bg.xml  layout_bg_line.xml  splash_screen.xml
app/src/main/res/layout/: activity_action_send_zip.xml  activity_agent.xml  activity_app_management.xml  activity_fresh_config.xml  activity_main.xml  activity_qr.xml  activity_qr_view.xml  app_list_item.xml  fragment_app_management.xml  fragment_devices.xml  fragment_directory_chooser.xml  fragment_sharing.xml  nav_header_main.xml
app/src/main/res/menu/: activity_main_drawer.xml
app/src/main/res/values/: dimens.xml  strings.xml  styles.xml
app/src/main/res/xml/: provider_paths.xml
(+1 files in other folders)
